<resources>
    <string name="app_name">데이체커</string>
    <string name="view_datetime">Date Time Text</string>

    <string name="settings">설정</string>
    <string name="records">기록하기</string>
    <string name="save_record">저장</string>
    <string name="inquiries">문의하기</string>

    <string name="security_category">보안</string>
    <string name="use_password">비밀번호 사용</string>
    <string name="change_password">비밀번호 변경</string>

    <string name="data_category">데이터</string>
    <string name="data_export">데이터 백업</string>
    <string name="data_import">데이터 복원</string>
    <string name="data_reset">데이터 초기화</string>

    <string name="application_category">어플리케이션</string>
    <string name="application_version">어플리케이션 버전</string>
    <string name="opensource_license">오픈소스 라이선스</string>

    <string name="pwd_insert_current">비밀번호를 입력하세요.</string>
    <string name="pwd_new_input">사용할 비밀번호를 입력하세요.</string>
    <string name="pwd_input_again">다시 한 번 입력하세요.</string>
    <string name="pwd_wrong_input">잘못된 입력입니다. 다시 시도하세요.</string>

    <string name="pwd_is_enabled">비밀번호가 설정되었습니다.</string>
    <string name="pwd_is_disabled">비밀번호가 해제되었습니다.</string>
    <string name="pwd_is_changed">비밀번호가 변경되었습니다.</string>

    <string name="no_record1">아직 기록이 없어요!</string>
    <string name="no_record2">새 기록을 만드시겠어요?</string>
    
    <string name="first_record">기록 남기기</string>
    <string name="add_record">기록 추가하기</string>

    <string name="record_condition">컨디션은 어떤가요?</string>
    <string name="record_state">상태는 어땠나요?</string>
    <string name="record_score">평가</string>
    <string name="record_memo">한 줄 메모</string>

    <string name="record_state_first">단단한 거</string>
    <string name="record_state_second">적당한 거</string>
    <string name="record_state_third">묽은 거</string>

    <string name="inquiry_spinner">- 선택하세요 -</string>
    <string name="inquiry_type1">어플 이용 문의</string>
    <string name="inquiry_type2">오류 관련 문의</string>
    <string name="inquiry_type3">데이터 삭제/백업 문의</string>
    <string name="inquiry_type4">기타 문의</string>
    <string name="inquiry_email">회신 받으실 이메일</string>
    <string name="inquiry_context">문의 내용</string>
    <string name="inquiry_agreement">회신을 위한 이메일 정보 수집에 동의합니다.</string>
    <string name="inquiry_send">문의 보내기</string>

    <string name="edit_record">수정</string>
    <string name="delete_record">삭제</string>
    <string name="cancel_text">취소</string>
    <string name="go_reset">초기화</string>

    <string name="cancel_writing_confirm">변경사항이 있습니다. 변경사항을 삭제하시겠습니까?</string>
    <string name="delete_record_confirm">기록을 삭제하시겠습니까? 삭제한 기록은 되돌릴 수 없습니다.</string>
    <string name="cancel_inquiry_confirm">작성하신 내용이 삭제됩니다. 계속하시겠습니까?</string>

    <string name="db_export_main">데이터를 백업하시겠습니까?</string>
    <string name="db_export_alert">
        ! 백업 데이터는 서버에 7일간 보관되며, 백업 시 등록하신 이메일과 비밀번호를 사용하여 기간 내에 복원하실 수 있습니다.\n\n! 동일한 이메일로 여러 번 백업하실 경우 가장 마지막 데이터로 백업됩니다.\n\n! 이메일과 비밀번호를 잊으시거나 백업한 날로부터 7일이 지난 경우 데이터 복원이 불가능하니 유의하여 주시기 바랍니다.
    </string>
    <string name="db_export_agree">내용을 확인하였으며, 백업을 위한 정보 수집에 동의합니다.</string>
    <string name="db_export_email">사용자 확인용 이메일</string>
    <string name="db_export_pwd">복원 시 사용할 비밀번호</string>
    <string name="db_export_pwd_hint">비밀번호는 8~15자 이내로 입력하세요</string>
    <string name="db_export_btn">데이터 백업하기</string>
    
    <string name="db_import_main">데이터를 복원하시겠습니까?</string>
    <string name="db_import_alert">
        ! 7일 내에 백업하신 데이터를 복원할 수 있습니다.\n\n! 백업 시 등록하신 이메일과 비밀번호를 사용해 복원하세요.\n\n! 복원 데이터를 가져오실 경우 현재 기기에 저장된 데이터는 덮어씌워집니다.
    </string>
    <string name="db_import_email">복원 등록 이메일</string>
    <string name="db_import_pwd">비밀번호</string>
    <string name="db_import_pwd_hint">8~15자 이내의 비밀번호</string>
    <string name="db_import_btn">데이터 복원하기</string>

    <string name="db_reset_main">기기에 저장된 모든 기록을 삭제하시겠습니까? 백업하지 않은 기록은 모두 지워지며, 다시 복구할 수 없습니다.</string>

    <string name="inquiry_complete">문의가 접수되었습니다. 감사합니다.</string>
    <string name="db_export_complete">데이터 백업이 완료되었습니다.</string>
    <string name="db_import_complete">데이터 복원이 완료되었습니다!</string>
    <string name="db_reset_complete">모든 기록이 삭제되었습니다.</string>

    <string name="wrong_pwd">잘못된 비밀번호입니다.</string>
    <string name="no_backup_file">해당 이메일로 백업된 파일이 없거나 유효한 기간이 지났습니다.</string>

    <string name="select_inquiry_type">문의 유형을 선택하세요.</string>
    <string name="no_inquiry_input">문의 내용을 작성하세요.</string>
    <string name="no_email_input">이메일 주소를 작성하세요.</string>
    <string name="wrong_email_format">이메일 형식이 잘못되었습니다.</string>
    <string name="no_pwd_input">비밀번호를 작성하세요.</string>
    <string name="wrong_pwd_format">8~15자 이내로 입력하세요.</string>
    <string name="wrong_pwd_format2">비밀번호는 8~15자 이내로 입력하세요.</string>
    <string name="check_internet">인터넷 연결을 먼저 확인해주세요.</string>
    <string name="agree_to_terms">정보 수집 동의가 필요합니다.</string>

    <string name="inquiry_error">문의 접수에 실패했습니다. 인터넷 연결을 확인하시고 잠시 후 다시 시도해주세요.</string>
    <string name="error_occurred">오류가 발생했습니다. 인터넷 연결 확인 후 다시 시도해주세요.</string>

    <string name="new_version_available">새 버전이 출시되었습니다.</string>
    <string name="is_newest_version">최신 버전입니다.</string>

    <string name="backpress_close">\'뒤로\' 버튼을 한 번 더 누르시면 종료됩니다.</string>

    <string name="sample_admob_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="sample_unit_id">ca-app-pub-3940256099942544/2247696110</string>

    <string name="desc_app_logo">홈 버튼</string>
    <string name="desc_next_month">다음 달 버튼</string>
    <string name="desc_prev_month">이전 달 버튼</string>
    <string name="desc_item_options">기록 아이템 옵션</string>
    <string name="desc_rating_bar">평점 선택 바</string>
    <string name="desc_back_button">뒤로가기</string>
    <string name="desc_memo_input">한 줄 메모 입력칸</string>
    <string name="desc_email_input">이메일 입력칸</string>
    <string name="desc_pwd_input">비밀번호 입력칸. 8에서 15글자 이내로 입력.</string>
    <string name="desc_inquiry_input">문의 내용 입력칸</string>

    <string name="desc_color_white">하얀색</string>
    <string name="desc_color_black">검은색</string>
    <string name="desc_color_red">빨간색</string>
    <string name="desc_color_pink">분홍색</string>
    <string name="desc_color_yellow">노란색</string>
    <string name="desc_color_green">초록색</string>
    <string name="desc_color_sky">하늘색</string>
    <string name="desc_color_blue">파란색</string>
</resources>