<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="password_category"
        app:title="@string/security_category"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="password_usage"
            app:title="@string/use_password"
            app:iconSpaceReserved="false" />

        <Preference
            app:key="reset_password"
            app:title="@string/change_password"
            app:isPreferenceVisible="false"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="data_category"
        app:title="@string/data_category"
        app:iconSpaceReserved="false">

        <Preference
            app:key="import_data"
            app:title="@string/data_import"
            app:iconSpaceReserved="false" />
        
        <Preference
            app:key="export_data"
            app:title="@string/data_export"
            app:iconSpaceReserved="false" />

        <Preference
            app:key="reset_data"
            app:title="@string/data_reset"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="developer_category"
        app:title="@string/application_category"
        app:iconSpaceReserved="false">

        <Preference
            app:key="app_version"
            app:title="@string/application_version"
            app:summary="123456"
            app:iconSpaceReserved="false" />

        <Preference
            app:key="send_inquiry"
            app:title="@string/inquiry_send"
            app:iconSpaceReserved="false" />

        <Preference
            app:key="opensource_license"
            app:title="@string/opensource_license"
            app:iconSpaceReserved="false" >

        </Preference>

    </PreferenceCategory>

</PreferenceScreen>